# Edge-detection

./: CMakeLists.txt  Common.cu  Common.cuh  EdgeDetection.cu  EdgeDetection.cuh  Kernels.cu  Kernels.cuh  Main.cu  Sobel.cu  Sobel.cuh  Test.cu
